--- a/activities.html
+++ b/activities.html
@@ -50,7 +50,7 @@
         <!-- Cards populated inline to match src content -->
         <div class="col-md-4">
           <div class="card border-0 shadow-sm">
-            <img src="../img/Tubing.jpg" class="activity-img" alt="Senderismo" data-duration="2-4 horas" data-difficulty="Fácil a Media" data-schedule="Diario 9:00 y 16:00" data-description="Explora rutas naturales con guías expertos" data-title="Senderismo Guiado">
+            <img src="Tubing.jpg" class="activity-img" alt="Senderismo" data-duration="2-4 horas" data-difficulty="Fácil a Media" data-schedule="Diario 9:00 y 16:00" data-description="Explora rutas naturales con guías expertos" data-title="Senderismo Guiado">
             <div class="card-body">
               <h6 class="text-brand">Tubing en Rio Celeste</h6>
               <p class="text-muted small mb-0">Explora el rio en la mejor experiencia</p>
@@ -60,7 +60,7 @@
 
         <div class="col-md-4">
           <div class="card border-0 shadow-sm">
-            <img src="../img/Rio Celeste.jpg" class="activity-img" alt="Ciclismo" data-duration="3 horas" data-difficulty="Media" data-schedule="Mar, Jue, Sáb 10:00" data-description="Recorre senderos ecológicos en bicicleta" data-title="Ciclismo de Montaña">
+            <img src="Rio Celeste.jpg" class="activity-img" alt="Ciclismo" data-duration="3 horas" data-difficulty="Media" data-schedule="Mar, Jue, Sáb 10:00" data-description="Recorre senderos ecológicos en bicicleta" data-title="Ciclismo de Montaña">
             <div class="card-body">
               <h6 class="text-brand">Senderismo en el Parque Volcan Tenorio</h6>
               <p class="text-muted small mb-0">Recorre los senderos del parque Volcan Tenorio</p>
@@ -70,7 +70,7 @@
 
         <div class="col-md-4">
           <div class="card border-0 shadow-sm">
-            <img src="../img/Tour Cacao.webp" class="activity-img" alt="Observación de aves" data-duration="2 horas" data-difficulty="Fácil" data-schedule="Lun, Mié, Vie 7:00" data-description="Descubre la fauna local con ornitólogos" data-title="Observación de Aves">
+            <img src="Tour Cacao.webp" class="activity-img" alt="Observación de aves" data-duration="2 horas" data-difficulty="Fácil" data-schedule="Lun, Mié, Vie 7:00" data-description="Descubre la fauna local con ornitólogos" data-title="Observación de Aves">
             <div class="card-body">
               <h6 class="text-brand">Tour Cacao</h6>
               <p class="text-muted small mb-0">Aprende como se procesa el cacaco</p>
@@ -80,7 +80,7 @@
 
         <div class="col-md-4">
           <div class="card border-0 shadow-sm">
-            <img src="../img/Laberinto.webp" class="activity-img" alt="Yoga" data-duration="1.5 horas" data-difficulty="Todos los niveles" data-schedule="Diario 7:30 y 18:00" data-description="Sesiones de yoga al aire libre" data-title="Yoga en la Naturaleza">
+            <img src="Laberinto.webp" class="activity-img" alt="Yoga" data-duration="1.5 horas" data-difficulty="Todos los niveles" data-schedule="Diario 7:30 y 18:00" data-description="Sesiones de yoga al aire libre" data-title="Yoga en la Naturaleza">
             <div class="card-body">
               <h6 class="text-brand">Laberinto Katira</h6>
               <p class="text-muted small mb-0">Disfruta de uno de los mejores laberintos del pais</p>
@@ -90,7 +90,7 @@
 
         <div class="col-md-4">
           <div class="card border-0 shadow-sm">
-            <img src="../img/Perezoso.jpg" class="activity-img" alt="Kayak" data-duration="2 horas" data-difficulty="Fácil a Media" data-schedule="Mié, Sáb, Dom 11:00" data-description="Navega por el río en kayaks sostenibles" data-title="Kayak Ecológico">
+            <img src="Perezoso.jpg" class="activity-img" alt="Kayak" data-duration="2 horas" data-difficulty="Fácil a Media" data-schedule="Mié, Sáb, Dom 11:00" data-description="Navega por el río en kayaks sostenibles" data-title="Kayak Ecológico">
             <div class="card-body">
               <h6 class="text-brand">Tour en el habitat del Perezoso</h6>
               <p class="text-muted small mb-0">Conoce los animales de nuestra zona</p>
@@ -100,7 +100,7 @@
 
         <div class="col-md-4">
           <div class="card border-0 shadow-sm">
-            <img src="../img/Tapir.webp" class="activity-img" alt="Escalada" data-duration="4 horas" data-difficulty="Media a Alta" data-schedule="Vie, Sáb, Dom 9:00" data-description="Rutas de escalada con equipo certificado" data-title="Escalada">
+            <img src="Tapir.webp" class="activity-img" alt="Escalada" data-duration="4 horas" data-difficulty="Media a Alta" data-schedule="Vie, Sáb, Dom 9:00" data-description="Rutas de escalada con equipo certificado" data-title="Escalada">
             <div class="card-body">
               <h6 class="text-brand">Tour nocturno del Tapir</h6>
               <p class="text-muted small mb-0">Acompañanos a buscar el tapir juntos</p>
