--- a/gallery.html
+++ b/gallery.html
@@ -47,17 +47,17 @@
 
     <main class="container py-5">
       <div class="row g-3">
-        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="img/Galeria.jpg"><img class="img-thumb" src="img/Galeria.jpg"></a></div>
-        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="../img/Galeria2.jpg"><img class="img-thumb" src="../img/Galeria2.jpg"></a></div>
-        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="../img/Galeria3.jpg"><img class="img-thumb" src="../img/Galeria3.jpg"></a></div>
-        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="../img/Galeria4.jpg"><img class="img-thumb" src="../img/Galeria4.jpg"></a></div>
+        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="Galeria.jpg"><img class="img-thumb" src="Galeria.jpg"></a></div>
+        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="Galeria2.jpg"><img class="img-thumb" src="Galeria2.jpg"></a></div>
+        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="Galeria3.jpg"><img class="img-thumb" src="Galeria3.jpg"></a></div>
+        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="Galeria4.jpg"><img class="img-thumb" src="Galeria4.jpg"></a></div>
 
-        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="../img/Galeria5.jpg"><img class="img-thumb" src="../img/Galeria5.jpg"></a></div>
-        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="../img/Galeria6.jpg"><img class="img-thumb" src="../img/Galeria6.jpg"></a></div>
-        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="../img/Galeria7.jpg"><img class="img-thumb" src="../img/Galeria7.jpg"></a></div>
+        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="Galeria5.jpg"><img class="img-thumb" src="Galeria5.jpg"></a></div>
+        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="Galeria6.jpg"><img class="img-thumb" src="Galeria6.jpg"></a></div>
+        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="Galeria7.jpg"><img class="img-thumb" src="Galeria7.jpg"></a></div>
 
-        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="../img/Galeria8.jpg"><img class="img-thumb" src="../img/Galeria8.jpg"></a></div>
-        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="../img/Galeria9.jpg"><img class="img-thumb" src="../img/Galeria9.jpg"></a></div>
+        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="Galeria8.jpg"><img class="img-thumb" src="Galeria8.jpg"></a></div>
+        <div class="col-6 col-md-3"><a href="#" data-bs-toggle="modal" data-bs-target="#imgModal" data-bs-img="Galeria9.jpg"><img class="img-thumb" src="Galeria9.jpg"></a></div>
       </div>
 
       <!-- Modal -->
