--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="row g-4">
           <div class="col-md-4">
             <div class="card h-100 shadow-sm">
-              <img src="../img/Habitacion.jpg" class="card-img-top" alt="Habitación Estándar">
+              <img src="Habitacion.jpg" class="card-img-top" alt="Habitación Estándar">
               <div class="card-body">
                 <h5 class="card-title text-brand">Habitación Estándar</h5>
                 <p class="h4 text-brand">$100 <small class="text-muted">por noche</small></p>
@@ -139,7 +139,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100 shadow-sm">
-              <img src="../img/Habitacion2.jpg" class="card-img-top" alt="Habitacion Doble">
+              <img src="Habitacion2.jpg" class="card-img-top" alt="Habitacion Doble">
               <div class="card-body">
                 <h5 class="card-title text-brand">Habitacion Doble</h5>
                 <p class="h4 text-brand">$150 <small class="text-muted">por noche</small></p>
@@ -149,7 +149,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100 shadow-sm">
-              <img src="../img/Habitacion3.jpg" class="card-img-top" alt="Habitacion Familiar">
+              <img src="Habitacion3.jpg" class="card-img-top" alt="Habitacion Familiar">
               <div class="card-body">
                 <h5 class="card-title text-brand">Habitacion Familiar</h5>
                 <p class="h4 text-brand">$200 <small class="text-muted">por noche</small></p>
@@ -205,13 +205,13 @@
         <div id="miniGallery" class="carousel slide mx-auto" data-bs-ride="carousel" style="max-width:900px;">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Galeria Previa.jpg" class="d-block w-100 rounded" alt="">
+              <img src="Galeria Previa.jpg" class="d-block w-100 rounded" alt="">
             </div>
             <div class="carousel-item">
-              <img src="../img/Galeria Previa4.jpg" class="d-block w-100 rounded" alt="">
+              <img src="Galeria Previa4.jpg" class="d-block w-100 rounded" alt="">
             </div>
             <div class="carousel-item">
-              <img src="../img/Galeria Previa3.jpg" class="d-block w-100 rounded" alt="">
+              <img src="Galeria Previa3.jpg" class="d-block w-100 rounded" alt="">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#miniGallery" data-bs-slide="prev">
