--- a/info.html
+++ b/info.html
@@ -219,7 +219,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <img src="../img/Informacion.jpg" alt="Sostenibilidad" class="img-fluid rounded shadow">
+            <img src="Informacion.jpg" alt="Sostenibilidad" class="img-fluid rounded shadow">
           </div>
         </div>
       </div>
