--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
         <!-- Service 1: Habitaciones -->
         <div class="row g-4 align-items-center mb-5">
           <div class="col-lg-6">
-            <img src="../img/Galeria7.jpg" alt="Habitaciones" class="service-img">
+            <img src="Galeria7.jpg" alt="Habitaciones" class="service-img">
           </div>
           <div class="col-lg-6">
             <div class="d-flex align-items-center gap-3 mb-3">
@@ -88,7 +88,7 @@
         <!-- Service 2: Restaurante -->
         <div class="row g-4 align-items-center mb-5 flex-row-reverse">
           <div class="col-lg-6">
-            <img src="../img/Galeria Previa4.jpg" alt="Restaurante" class="service-img">
+            <img src="Galeria Previa4.jpg" alt="Restaurante" class="service-img">
           </div>
           <div class="col-lg-6">
             <div class="d-flex align-items-center gap-3 mb-3">
@@ -109,7 +109,7 @@
         <!-- Service 3: Spa & Bienestar -->
         <div class="row g-4 align-items-center mb-5">
           <div class="col-lg-6">
-            <img src="../img/Galeria9.jpg" alt="Spa" class="service-img">
+            <img src="Galeria9.jpg" alt="Spa" class="service-img">
           </div>
           <div class="col-lg-6">
             <div class="d-flex align-items-center gap-3 mb-3">
