--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
         </div>
         <div class="row text-center mt-3">
           <div class="col-md-4"><div class="p-3 bg-light rounded">Desde el Aeropuerto<br>45 minutos en coche</div></div>
-          <div class="col-md-4"><div class="p-3 bg-light rounded">Transporte Público<br>Línea 5 hasta "Hotel Verde"</div></div>
+          <div class="col-md-4"><div class="p-3 bg-light rounded">Transporte Público<br>Línea 5 hasta</div></div>
           <div class="col-md-4"><div class="p-3 bg-light rounded">Parking<br>Gratuito para huéspedes</div></div>
         </div>
       </section>
